test/types/type_variables/deitz/test_clone_class1a.good
error: '_ret_=' has mixed basic types:( int64 float64 ) 
error: '_ret_=' has mixed basic types:( int64 float64 ) 
error: '_ret_x' has mixed basic types:( int64 float64 ) 
error: '_tmp' has mixed basic types:( int64 float64 ) 
error: '_tmp' has mixed basic types:( int64 float64 ) 
error: '_tmp' has mixed basic types:( int64 float64 ) 
error: '_tmp' has mixed basic types:( unspecified_type int64 float64 ) 
error: '_tmp' has mixed basic types:( unspecified_type int64 float64 ) 
error: 'a' has mixed basic types:( int64 float64 ) 
error: 'a' has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
fail: program does not type
prelude.chpl:291: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:291: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:292: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:292: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:1: class foo:: 'x' has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( unspecified_type int64 float64 ) 
test_clone_class1a.chpl:2: expression has mixed basic types:( unspecified_type int64 float64 ) 
test_clone_class1a.chpl:6: expression has mixed basic types:( int64 float64 ) 
